AUTOMAKE_OPTIONS = foreign
SUBDIRS = lib src test
ACLOCAL_AMFLAGS = -I config
EXTRA_DIST = 						\
	README 						\
	LICENSE 					\
	AUTHORS 					\
	include 					\
	COPYRIGHT					\
	autogen.sh					\
	etc/purger/purger.conf				\
	etc/purger/postgres_setup/extra.sql		\
	etc/purger/postgres_setup/init.sh		\
	etc/purger/postgres_setup/INSTALL		\
	etc/purger/postgres_setup/new_tables.sql	\
	etc/purger/postgres_setup/scratch.sql		\
	etc/purger/postgres_setup/generate_partitions.py\
	etc/purger/postgres_setup/init.sql		\
	etc/purger/postgres_setup/new_partition.sql	\
	etc/purger/postgres_setup/README		


