AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I config
SUBDIRS = lib src test
EXTRA_DIST = 						\
	etc/purger/purger.conf				\
	etc/purger/postgres_setup/extra.sql		\
	etc/purger/postgres_setup/init.sh		\
	etc/purger/postgres_setup/INSTALL		\
	etc/purger/postgres_setup/new_tables.sql	\
	etc/purger/postgres_setup/scratch.sql		\
	etc/purger/postgres_setup/generate_partitions.py\
	etc/purger/postgres_setup/init.sql		\
	etc/purger/postgres_setup/new_partition.sql	\
	etc/purger/postgres_setup/README		\
	README 						\
	COPYRIGHT					\
	LICENSE 					\
	AUTHORS 					\
	include 					\
	autogen.sh					\
	lanl-purger.spec				\
	lanl-purger.spec.in
	
MAINTENERCLEANFILES = 					\
	aclocal.m4 config.guess config.h.in config.sub  \
	configure install-sh ltconfig ltmain.sh missing \
	mkinstalldirs stamp-h1
