#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([lanl-purger-tests], [0.1], [jharrodlafon@users.sourceforge.net])

# Checks for programs.
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([email
                   ldap
                   log])

AM_INIT_AUTOMAKE([lanl-purger-tests],[0.1])
AC_OUTPUT
